# slipstream-rust

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  release.yml
crates/slipstream-client/: Cargo.toml
crates/slipstream-client/src/: runtime.rs
crates/slipstream-client/src/dns/: path.rs  poll.rs  resolver.rs  response.rs
crates/slipstream-client/src/runtime/: path.rs
crates/slipstream-core/: Cargo.toml
crates/slipstream-core/src/: net.rs
crates/slipstream-dns/: Cargo.toml
crates/slipstream-ffi/: Cargo.toml  build.rs
crates/slipstream-ffi/cc/: picotls_layout.c
crates/slipstream-ffi/src/: lib.rs  picoquic.rs  runtime.rs
crates/slipstream-server/: Cargo.toml
crates/slipstream-server/src/: config.rs  main.rs  server.rs  udp_fallback.rs
crates/slipstream-server/src/udp_fallback/: decode.rs
docs/: build.md  config.md  release.md
scripts/: README.md  build_picoquic.sh  build_picoquic_windows.ps1  verify_windows_artifact_deps.ps1
